[gd_scene load_steps=11 format=2]

[ext_resource path="res://mapa02.tscn" type="PackedScene" id=1]
[ext_resource path="res://pixel_font_theme.tres" type="Theme" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://selection_3x.tres" type="SpriteFrames" id=4]
[ext_resource path="res://selection_1x.tres" type="SpriteFrames" id=5]
[ext_resource path="res://tiles.tres" type="TileSet" id=6]
[ext_resource path="res://selection_2x.tres" type="SpriteFrames" id=7]
[ext_resource path="res://icon_list.png" type="Texture" id=8]
[ext_resource path="res://GameUI.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 10, 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]

[node name="GameTileMap" type="TileMap" parent="TileMap"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 5, 5 )
format = 1

[node name="GameUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_list" type="Sprite" parent="GameUI"]
position = Vector2( 75, 59 )
texture = ExtResource( 8 )

[node name="selectedItemMenu" type="Sprite" parent="GameUI"]
position = Vector2( 5, 59 )
texture = SubResource( 1 )

[node name="selection_2x" type="AnimatedSprite" parent="GameUI"]
position = Vector2( 34.9799, 59 )
frames = ExtResource( 7 )
frame = 6
playing = true

[node name="ui_info" type="Label" parent="GameUI"]
margin_right = 39.0
margin_bottom = 5.0
text = "Mar 1900"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_info_timer" type="Timer" parent="GameUI"]
wait_time = 2.0
autostart = true

[node name="mapSelection" type="Node2D" parent="GameUI"]
position = Vector2( 34.9799, 59 )

[node name="selection_1x" type="AnimatedSprite" parent="GameUI/mapSelection"]
position = Vector2( -2.97992, -27 )
frames = ExtResource( 5 )
frame = 4
playing = true

[node name="selection_2x" type="AnimatedSprite" parent="GameUI/mapSelection"]
visible = false
position = Vector2( 0.0200806, -24 )
frames = ExtResource( 7 )
playing = true

[node name="selection_3x" type="AnimatedSprite" parent="GameUI/mapSelection"]
visible = false
position = Vector2( 2.02008, -22 )
frames = ExtResource( 4 )
frame = 7
playing = true

[connection signal="onSelectedIconPosition" from="GameUI" to="." method="_on_GameUI_onSelectedIconPosition"]
[connection signal="timeout" from="GameUI/ui_info_timer" to="GameUI" method="_on_ui_info_timer_timeout"]
